--- a/index.html
+++ b/index.html
@@ -2,36 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="src\css\styles.css">
   </head>
 
   <body>
-	<!-- ========== HEADER SECTION ========== -->
-	<section id="home" name="home"></section>
-	<div id="headerwrap">
-        <div class="container">
-            <div class="row">
-                <h1>Tree lists in SWO</h1>
-                <br>
-                <h3>Tree lists for stands in SWO</h3>
-            </div>
-            <br />
-            <br />
-            <br />
-            <div>
-                <iframe width="1200" height="1000" frameborder="0" scrolling="no" src="stand_overview.html"></iframe>
-            </div>
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-        </div><!-- /container -->
-	</div><!-- /headerwrap -->
-	
-		
+    <div id="header">
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-</body>
+    </div>
+    <div>
+
+    </div>
+
+  </body>
+  <script src="src/js/index.js"></script>
 </html>
