Added separate tags in index.html

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
 
   <body>
     <div id="header">
-
+      fdsaf
     </div>
-    <div>
-
+    <div id="map">
+      32123
+    </div>
+    <div id="footer">
+      3213
     </div>
 
   </body>
