--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
       fdsaf
     </div>
     <div id="map">
-      32123
+      <div>
+        <iframe width="1200" height="1000" frameborder="0" scrolling="no" src="stand_overview.html"></iframe>
+    </div>
     </div>
     <div id="footer">
       3213
