--- a/index.html
+++ b/index.html
@@ -3,15 +3,21 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="src\css\styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
   </head>
 
   <body>
     <div id="header">
-      fdsaf
+      <img id="treeIcon" src="src/img/tree.png" />
+      <div class="button" id="home">Home</div>
+      <div class="button" id="downloads">Downloads</div>
+      <div class="button" id="about">About</div>
     </div>
+
     <div id="map">
-      32123
+      
     </div>
+
     <div id="footer">
       3213
     </div>
