--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="src\css\styles.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+    integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+    crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
+    integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
+    crossorigin=""></script>
   </head>
 
   <body>
     <div id="header">
-      <img id="treeIcon" src="src/img/tree.png" />
       <div class="button" id="home">Home</div>
       <div class="button" id="downloads">Downloads</div>
       <div class="button" id="about">About</div>
