--- a/index.html
+++ b/index.html
@@ -19,13 +19,9 @@
       <div class="button" id="about">About</div>
     </div>
 
-    <div id="map">
-      
-    </div>
+    <div id="map"></div>
 
-    <div id="footer">
-      3213
-    </div>
+    <div id="footer"></div>
 
   </body>
   <script src="src/js/index.js"></script>
