--- a/index.html
+++ b/index.html
@@ -12,21 +12,15 @@
     crossorigin=""></script>
   </head>
 
-  <body>
+  <body id="body">
     <div id="header">
       <div class="button" id="home">Home</div>
       <div class="button" id="downloads">Downloads</div>
       <div class="button" id="about">About</div>
     </div>
-
     <div id="map"></div>
-
-    
-
-    <div id="footer">
-      3213
-    </div>
-
-  </body>
+    <div id="popup"></div>
+    <div id="footer"></div>
   <script src="src/js/index.js"></script>
+  </body>
 </html>
