--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
       <div class="button" id="home">Home</div>
       <div class="button" id="downloads">Downloads</div>
       <div class="button" id="about">About</div>
+      <div id="searchbar">
+        <input id="searchbarContent" placeholder="Search polygons"/>
+        <img id="searchbarIcon" src="src/img/search_icon.png" />
+      </div>
     </div>
     <div id="map"></div>
     <div id="popup"></div>
